stylesheets/styles.css
body {
    box-sizing: border-box;
    color:#373737;
    font-size: 16px;
    font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    margin-left: 50px;
    margin-right: 50px;
}
h1, h2, h3, h4, h5, h6 {
    margin: 10px 0;
    font-weight: 300;
    color:#222222;
    font-family: 'Freckle Face', 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
    letter-spacing: -1px;
}
h1 {
    font-size: 36px;
    font-weight: 700;
}

h2 {
    padding-bottom: 10px;
    font-size: 32px;
    background: url('../images/bg_hr.png') repeat-x bottom;
}

h3 {
    font-size: 24px;
}

h4 {
    font-size: 21px;
}

h5 {
    font-size: 18px;
}

h6 {
    font-size: 16px;
}

p {
    margin: 10px 0 15px 0;
}

section-number-4 img {
    width: 400px;
    border-width: 0px;
    box-shadow: none;
}

@media (min-width:767px){

    /* Column clear fix */
    .col-lg-1:nth-child(12n+0),
    .col-lg-2:nth-child(6n+0),
    .col-lg-3:nth-child(4n+0),
    .col-lg-4:nth-child(3n+0),
    .col-lg-6:nth-child(2n+0),
    .col-md-1:nth-child(12n+0),
    .col-md-2:nth-child(6n+0),
    .col-md-3:nth-child(4n+0),
    .col-md-4:nth-child(3n+0),
    .col-md-6:nth-child(2n+0){
        clear: none;
    }
    .col-sm-1:nth-child(12n+0),
    .col-sm-2:nth-child(6n+0),
    .col-sm-3:nth-child(4n+0),
    .col-sm-4:nth-child(3n+0),
    .col-sm-6:nth-child(2n+0){
        clear: left;
    }
}


/*  Medium Desktop  */
@media (min-width:992px){

    /* Column clear fix */
    .col-lg-1:nth-child(12n+0),
    .col-lg-2:nth-child(6n+0),
    .col-lg-3:nth-child(4n+0),
    .col-lg-4:nth-child(3n+0),
    .col-lg-6:nth-child(2n+0),
    .col-sm-1:nth-child(12n+0),
    .col-sm-2:nth-child(6n+0),
    .col-sm-3:nth-child(4n+0),
    .col-sm-4:nth-child(3n+0),
    .col-sm-6:nth-child(2n+0){
        clear: none;
    }
    .col-md-1:nth-child(12n+0),
    .col-md-2:nth-child(6n+0),
    .col-md-3:nth-child(4n+0),
    .col-md-4:nth-child(3n+0),
    .col-md-6:nth-child(2n+0){
        clear: left;
    }
}


/*  Large Desktop  */
@media (min-width:1200px){

    /* Column clear fix */
    .col-md-1:nth-child(12n+0),
    .col-md-2:nth-child(6n+0),
    .col-md-3:nth-child(4n+0),
    .col-md-4:nth-child(3n+0),
    .col-md-6:nth-child(2n+0),
    .col-sm-1:nth-child(12n+0),
    .col-sm-2:nth-child(6n+0),
    .col-sm-3:nth-child(4n+0),
    .col-sm-4:nth-child(3n+0),
    .col-sm-6:nth-child(2n+0){
        clear: none;
    }
    .col-lg-1:nth-child(12n+0),
    .col-lg-2:nth-child(6n+0),
    .col-lg-3:nth-child(4n+0),
    .col-lg-4:nth-child(3n+0),
    .col-lg-6:nth-child(2n+0){
        clear: left;
    }
}

.side_image {
    float: left;
    width: 180px;
    height: 200px;
    transform:rotate(-5deg);
    -webkit-transform:rotate(-5deg);
    -moz-transform:rotate(-5deg);
    padding: 0px 0px 0px 0px;
    border-width: 0px 0px 0px 0px;
    margin-bottom: 20px;
    margin-right: 30px;
    -moz-box-shadow:    3px 0px 15px 0px #888;
    -webkit-box-shadow: 3px 0px 15px 0px #888;
    box-shadow:         3px 0px 15px 0px #888;
}

@media (max-width: 640px) {
    body {
        margin-left: 20px;
        margin-right: 20px;
    }
    .side_image {
        float: none;
        align: center;
        margin-bottom: 20px;
        margin-right: 30px;
    }
}

